<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/ScanButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:text="@string/scan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/Touroku"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:text="@string/touroku"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ScanButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ScanButton"
        app:layout_constraintTop_toBottomOf="@+id/ScanButton"
        app:layout_constraintVertical_bias="0.188" />

    <Button
        android:id="@+id/Config"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:text="@string/config"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ScanButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ScanButton"
        app:layout_constraintTop_toBottomOf="@+id/ScanButton"
        app:layout_constraintVertical_bias="0.665" />
</androidx.constraintlayout.widget.ConstraintLayout>